--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model MVC.Presentacion.Models.AsignacionModel
+@using MVC.Presentacion.Models
 @using PagedList.Mvc;
 @using PagedList;
 @Html.DevExpress().GetStyleSheets(
@@ -29,7 +30,7 @@
 </script>
 <body>
     @using (Html.BeginForm("Crear", "Asignacion", FormMethod.Post))
-    {        
+    {
         <input type="text" hidden="hidden" name="TipoVehiculo" id="TipoVehiculo" />
         <section class="content home">
             <div class="container-fluid">
@@ -98,7 +99,7 @@
                                            e.Properties["cphidenVehiculos"] = list;
                                        };
                                    }).BindList(ViewBag.Vehiculos).GetHtml()
-                                               @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
+                                                @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
                                             </div>
                                         </div>
                                         <div class="col-md-2 text-right">
@@ -107,12 +108,14 @@
                                                 @if (ViewBag.EsEdicion == null)
                                                 {
                                                     <button id="BtnCrear" formaction=@Url.Action("Crear") class="btn btn-primary btn-icon  btn-icon-mini btn-round">
-                                                        <i class="zmdi zmdi-plus"></i></button>
+                                                        <i class="zmdi zmdi-plus"></i>
+                                                    </button>
                                                 }
                                                 else
                                                 {
                                                     <button btn id="btnUpDate" formaction="EditarProducto" class="btn btn-primary btn-round">
-                                                        <i class="zmdi zmdi-swap"></i> Terminar Edicion</button>
+                                                        <i class="zmdi zmdi-swap"></i> Terminar Edicion
+                                                    </button>
                                                 }
                                             </div>
                                         </div>
@@ -132,18 +135,20 @@
                                         </div>
                                     }
                                     <div class="row clearfix">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
-                                            </div>
-                                        </div>
+                                        @*<div class="col-md-4">
+                                                <div class="form-group">
+                                                    <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
+                                                </div>
+                                            </div>*@
                                     </div>
                                     <div class="row clearfix blockquote blockquote-info btn-round">
-                                        <div class="table-responsive">
+                                        @Html.Partial("_CB_Asignaciones", (List<AsignacionModel>)TempData["DataSourceAsignaciones"])
+
+                                        @*<div class="table-responsive">
                                             <table class="table table-striped table-hover filterable" name="RequisicionProductos">
                                                 <thead>
                                                     <tr>
-                                                       
+
                                                         <td><strong>Nombre Chofer</strong></td>
                                                         <td><strong>Vehiculo</strong></td>
                                                         <td><strong>Acción</strong></td>
@@ -151,32 +156,32 @@
                                                 </thead>
                                                 <tbody>
                                                     @foreach (var asign in ViewBag.Asignaciones)
-                                                    {
-                                                        @*@asign.IdAsignacion = asign.IdAsignacion + 1;*@
-                                                        <tr>
-                                                            @*<td>@asign.IdAsignacion</td>*@
-                                                            <td>@asign.Chofer </td>
-                                                            <td>@asign.Vehiculo</td>
-                                                            <td>
-                                                                <a href="@Url.Action("Eliminar", "Asignacion", new { Id = asign.IdVehiculo, TV = asign.TipoVehiculo })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                    <i class="material-icons">delete</i>
-                                                                    <span>Eliminar producto</span>
-                                                                </a>
-                                                            </td>
-                                                        </tr>
-                                                    }
-                                                </tbody>
-                                            </table>
-                                        </div>
+                                                    {*@
+                                        @*@asign.IdAsignacion = asign.IdAsignacion + 1;*@
+                                        @*<tr>*@
+                                        @*<td>@asign.IdAsignacion</td>*@
+                                        @*<td>@asign.Chofer </td>
+                                                                <td>@asign.Vehiculo</td>
+                                                                <td>
+                                                                    <a href="@Url.Action("Eliminar", "Asignacion", new { Id = asign.IdVehiculo, TV = asign.TipoVehiculo })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                        <i class="material-icons">delete</i>
+                                                                        <span>Eliminar producto</span>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        }
+                                                    </tbody>
+                                                </table>
+                                            </div>*@
                                     </div>
-                                    <div class="row clearfix">
-                                        <div class="col-md-6">
-                                            Página @(ViewBag.Asignaciones.PageCount < ViewBag.Asignaciones.PageNumber ? 0 : ViewBag.Asignaciones.PageNumber) de @ViewBag.Asignaciones.PageCount
-                                        </div>
-                                        <div class="col-md-6 text-right">
-                                            @Html.PagedListPager((IPagedList)ViewBag.Asignaciones, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
-                                        </div>
-                                    </div>
+                                    @*<div class="row clearfix">
+                                            <div class="col-md-6">
+                                                Página @(ViewBag.Asignaciones.PageCount < ViewBag.Asignaciones.PageNumber ? 0 : ViewBag.Asignaciones.PageNumber) de @ViewBag.Asignaciones.PageCount
+                                            </div>
+                                            <div class="col-md-6 text-right">
+                                                @Html.PagedListPager((IPagedList)ViewBag.Asignaciones, page => Url.Action("Index", new { page, @class = "btn btn-primary btn-simple" }))
+                                            </div>
+                                        </div>*@
                                 </div>
                             </div>
                         </div>
