--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
@@ -1,6 +1,18 @@
-﻿@model MVC.Presentacion.Models.Catalogos.CategoriaProductoDTO
+﻿@using MVC.Presentacion.Models.Catalogos
+@model MVC.Presentacion.Models.Catalogos.CategoriaProductoDTO
 @using PagedList.Mvc;
 @using PagedList;
+@Html.DevExpress().GetStyleSheets(
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
+
+        )
+@Html.DevExpress().GetScripts(
+            new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+            new Script { ExtensionSuite = ExtensionSuite.Editors },
+            new Script { ExtensionSuite = ExtensionSuite.GridView }
+        )
 
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
@@ -12,14 +24,14 @@
         $(".filterable tr:has(td)").each(function () {
             var t = $(this).text().toLowerCase();
             $("<td class='indexColumn'></td>")
-             .hide().text(t).appendTo(this);
+                .hide().text(t).appendTo(this);
         });
         $("#txtNumeroFiltro").keyup(function () {
             var s = $(this).val().toLowerCase().split(" ");
             $(".filterable tr:hidden").show();
             $.each(s, function () {
                 $(".filterable tr:visible .indexColumn:not(:contains('"
-                   + this + "'))").parent().hide();
+                    + this + "'))").parent().hide();
             });//each
         });//key up.
     });//document.ready
@@ -34,7 +46,7 @@
 <section class="content">
     <div class="container-fluid">
         @using (Html.BeginForm("CrearCategoria", "Producto", FormMethod.Post))
-            {
+        {
             @Html.HiddenFor(m => m.IdEmpresa)
             @Html.HiddenFor(m => m.IdCategoria)
             <div class="block-header">
@@ -107,16 +119,16 @@
                                 @if (ViewBag.MensajeError != null)
                                 {
                                     <br />
-                                        <div id="DivAlerta" class="container">
-                                            <div class="alert alert-danger">
-                                                <div class="alert-icon">
-                                                    <i class="zmdi zmdi-block"></i>
-                                                </div>
-                                                <strong>
-                                                    @ViewBag.MensajeError
-                                                </strong>
+                                    <div id="DivAlerta" class="container">
+                                        <div class="alert alert-danger">
+                                            <div class="alert-icon">
+                                                <i class="zmdi zmdi-block"></i>
                                             </div>
+                                            <strong>
+                                                @ViewBag.MensajeError
+                                            </strong>
                                         </div>
+                                    </div>
                                 }
                             </div>
                         </div>
@@ -146,52 +158,53 @@
                                         }
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="form-group">
-                                            <input type="text" placeholder="Número" id="txtNumeroFiltro" class="form-control" />
-                                        </div>
+                                        @*<div class="form-group">
+                                                <input type="text" placeholder="Número" id="txtNumeroFiltro" class="form-control" />
+                                            </div>*@
                                     </div>
-                                </div>
+                                </div><br />
                                 <div class="row clearfix blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-hover filterable" name="RequisicionProductos">
-                                            <thead>
-                                                <tr>
-                                                    <td><b>Nombre</b></td>
-                                                    <td><b>Descripción</b></td>
-                                                    <td><b>Acción</b></td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var cat in ViewBag.Categorias)
-                                                {
+                                    @Html.Partial("_CB_Categorias", (List<CategoriaProductoDTO>)TempData["DataSourceCategorias"])
+                                    @*<div class="table-responsive">
+                                            <table class="table table-striped table-hover filterable" name="RequisicionProductos">
+                                                <thead>
                                                     <tr>
-                                                        <td>@cat.Nombre </td>
-                                                        <td>@cat.Descripcion </td>
-                                                        <td>
-                                                            <a href="@Url.Action("EditarCategoria", "Producto" , new { Id=cat.IdCategoria })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                <i class="material-icons">edit</i>
-                                                                <span>Editar categoría</span>
-                                                            </a>
-                                                            <a href="@Url.Action("EliminarCategoria", "Producto" , new { Id=cat.IdCategoria})" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                <i class="material-icons">delete</i>
-                                                                <span>Eliminar categoría</span>
-                                                            </a>
-
-                                                        </td>
+                                                        <td><b>Nombre</b></td>
+                                                        <td><b>Descripción</b></td>
+                                                        <td><b>Acción</b></td>
                                                     </tr>
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var cat in ViewBag.Categorias)
+                                                    {
+                                                        <tr>
+                                                            <td>@cat.Nombre </td>
+                                                            <td>@cat.Descripcion </td>
+                                                            <td>
+                                                                <a href="@Url.Action("EditarCategoria", "Producto" , new { Id=cat.IdCategoria })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">edit</i>
+                                                                    <span>Editar categoría</span>
+                                                                </a>
+                                                                <a href="@Url.Action("EliminarCategoria", "Producto" , new { Id=cat.IdCategoria})" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">delete</i>
+                                                                    <span>Eliminar categoría</span>
+                                                                </a>
+
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        </div>*@
                                 </div>
-                                <div class="row clearfix">
-                                    <div class="col-md-6">
-                                        Página @(ViewBag.Categorias.PageCount < ViewBag.Categorias.PageNumber ? 0 : ViewBag.Categorias.PageNumber) de @ViewBag.Categorias.PageCount
-                                    </div>
-                                    <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Categorias, page => Url.Action("Categoria", new { page, @class = "btn btn-primary btn-simple" }))
-                                    </div>
-                                </div>
+                                @*<div class="row clearfix">
+                                        <div class="col-md-6">
+                                            Página @(ViewBag.Categorias.PageCount < ViewBag.Categorias.PageNumber ? 0 : ViewBag.Categorias.PageNumber) de @ViewBag.Categorias.PageCount
+                                        </div>
+                                        <div class="col-md-6 text-right">
+                                            @Html.PagedListPager((IPagedList)ViewBag.Categorias, page => Url.Action("Categoria", new { page, @class = "btn btn-primary btn-simple" }))
+                                        </div>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
