--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
@@ -1,6 +1,18 @@
-﻿@model MVC.Presentacion.Models.Catalogos.UnidadMedidaDTO
+﻿@using MVC.Presentacion.Models.Catalogos
+@model MVC.Presentacion.Models.Catalogos.UnidadMedidaDTO
 @using PagedList.Mvc;
 @using PagedList;
+@Html.DevExpress().GetStyleSheets(
+            new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
+            new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
+
+        )
+@Html.DevExpress().GetScripts(
+            new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+            new Script { ExtensionSuite = ExtensionSuite.Editors },
+            new Script { ExtensionSuite = ExtensionSuite.GridView }
+        )
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
@@ -11,14 +23,14 @@
         $(".filterable tr:has(td)").each(function () {
             var t = $(this).text().toLowerCase();
             $("<td class='indexColumn'></td>")
-             .hide().text(t).appendTo(this);
+                .hide().text(t).appendTo(this);
         });
         $("#txtNumeroFiltro").keyup(function () {
             var s = $(this).val().toLowerCase().split(" ");
             $(".filterable tr:hidden").show();
             $.each(s, function () {
                 $(".filterable tr:visible .indexColumn:not(:contains('"
-                   + this + "'))").parent().hide();
+                    + this + "'))").parent().hide();
             });
         });
     });
@@ -33,7 +45,7 @@
 <section class="content home">
     <div class="container-fluid">
         @using (Html.BeginForm("CrearLineaProducto", "Producto", FormMethod.Post))
-            {
+        {
             @Html.HiddenFor(m => m.IdEmpresa)
             @Html.HiddenFor(m => m.IdUnidadMedida)
             <div class="block-header">
@@ -57,7 +69,7 @@
                                     <div class="col-sm-4">
                                         <b>Gasera:</b>
                                         @if (ViewBag.EsAdmin)
-                                        {                                          
+                                        {
                                             <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
                                                 @foreach (var lst in ViewBag.Empresas)
                                                 {
@@ -113,16 +125,16 @@
                                 @if (ViewBag.MensajeError != null)
                                 {
                                     <br />
-                                        <div id="DivAlerta" class="container">
-                                            <div class="alert alert-danger">
-                                                <div class="alert-icon">
-                                                    <i class="zmdi zmdi-block"></i>
-                                                </div>
-                                                <strong>
-                                                    @ViewBag.MensajeError
-                                                </strong>
+                                    <div id="DivAlerta" class="container">
+                                        <div class="alert alert-danger">
+                                            <div class="alert-icon">
+                                                <i class="zmdi zmdi-block"></i>
                                             </div>
+                                            <strong>
+                                                @ViewBag.MensajeError
+                                            </strong>
                                         </div>
+                                    </div>
                                 }
                             </div>
                         </div>
@@ -151,54 +163,55 @@
                                         }
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="form-group">
-                                            <input type="text" placeholder="Número" id="txtNumeroFiltro" class="form-control" />
-                                        </div>
+                                        @*<div class="form-group">
+                                                <input type="text" placeholder="Número" id="txtNumeroFiltro" class="form-control" />
+                                            </div>*@
                                     </div>
-                                </div>
+                                </div><br />
                                 <div class="row clearfix blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-hover filterable" name="RequisicionProductos">
-                                            <thead>
-                                                <tr>
-                                                    <td><b>Nombre</b></td>
-                                                    <td><b>Descripción</b></td>
-                                                    <td><b>Acrónimo</b></td>
-                                                    <td><b>Acción</b></td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var cat in ViewBag.Unidades)
-                                                {
+                                    @Html.Partial("_CB_Unidades", (List<UnidadMedidaDTO>)TempData["DataSourceUnidades"])
+                                    @*<div class="table-responsive">
+                                            <table class="table table-striped table-hover filterable" name="RequisicionProductos">
+                                                <thead>
                                                     <tr>
-                                                        <td>@cat.Nombre </td>
-                                                        <td>@cat.Descripcion </td>
-                                                        <td>@cat.Acronimo</td>
-                                                        <td>
-                                                            <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                <i class="material-icons">edit</i>
-                                                                <span>Editar unidad medida</span>
-                                                            </a>
-                                                            <a href="@Url.Action("EliminarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                <i class="material-icons">delete</i>
-                                                                <span>Eliminar unidad medida</span>
-                                                            </a>
-
-                                                        </td>
+                                                        <td><b>Nombre</b></td>
+                                                        <td><b>Descripción</b></td>
+                                                        <td><b>Acrónimo</b></td>
+                                                        <td><b>Acción</b></td>
                                                     </tr>
-                                                }
-                                            </tbody>
-                                        </table>
-                                    </div>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var cat in ViewBag.Unidades)
+                                                    {
+                                                        <tr>
+                                                            <td>@cat.Nombre </td>
+                                                            <td>@cat.Descripcion </td>
+                                                            <td>@cat.Acronimo</td>
+                                                            <td>
+                                                                <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">edit</i>
+                                                                    <span>Editar unidad medida</span>
+                                                                </a>
+                                                                <a href="@Url.Action("EliminarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    <i class="material-icons">delete</i>
+                                                                    <span>Eliminar unidad medida</span>
+                                                                </a>
+
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        </div>*@
                                 </div>
-                                <div class="row clearfix">
-                                    <div class="col-md-6">
-                                        Página @(ViewBag.Unidades.PageCount < ViewBag.Unidades.PageNumber ? 0 : ViewBag.Unidades.PageNumber) de @ViewBag.Unidades.PageCount
-                                    </div>
-                                    <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Unidades, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
-                                    </div>
-                                </div>
+                                @*<div class="row clearfix">
+                                        <div class="col-md-6">
+                                            Página @(ViewBag.Unidades.PageCount < ViewBag.Unidades.PageNumber ? 0 : ViewBag.Unidades.PageNumber) de @ViewBag.Unidades.PageCount
+                                        </div>
+                                        <div class="col-md-6 text-right">
+                                            @Html.PagedListPager((IPagedList)ViewBag.Unidades, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
+                                        </div>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
