--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Index.cshtml
@@ -59,7 +59,7 @@
                     </div>
                     <div class="body">
                         <div class="row clearfix">
-                            <div class="col-sm-3">
+                            <div class="col-sm-9">
                                 <div>
                                     <strong>Gasera:</strong>
                                     @if (ViewBag.EsAdmin)
@@ -78,71 +78,72 @@
                                     }
                                 </div>
                             </div>
-                        </div>
-                        <br />
-                        <div class="row clearfix">
-                        </div>
-                        <br />
-                        <div class="row clearfix">
-                            <div class="col-sm-12">
-                                <div class="row clearfix">
-                                    <div class="col-sm-3">
-                                       <strong>Nombre:</strong>                                    
-                                        @Html.DevExpress().ComboBox(settings =>
-                                   {
-                                       settings.Name = "IdUsuario";
-                                       settings.Width = 180;
-                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                       settings.Theme = "Material";
-                                       settings.Properties.TextField = "NombreCompleto";
-                                       settings.Properties.ValueField = "IdUsuario";                                       
-                                       settings.Properties.ValidationSettings.RequiredField.IsRequired = false;
-                                       settings.PreRender = (s, e) =>
-                                       {
-                                           MVCxComboBox combo = s as MVCxComboBox;
-                                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                                           combo.Properties.ValueType = typeof(int);
-                                           combo.SelectedIndex = 0;
-                                       };
-                                   }).BindList(ViewBag.ListaUsuarios).Bind(Model.IdUsuario).GetHtml()
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <strong>Correo Elect. (Acceso):</strong>
-                                        @Html.DevExpress().ComboBox(settings =>
-                                   {
-                                       settings.Name = "Email1";
-                                       settings.Width = 180;
-                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                       settings.Theme = "Material";
-                                       settings.Properties.TextField = "Email1";
-                                       settings.Properties.ValueField = "Email1";
-                                       settings.PreRender = (s, e) =>
-                                       {
-                                           MVCxComboBox combo = s as MVCxComboBox;
-                                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                                           combo.SelectedIndex = 0;
-                                       };
-                                   }).BindList(ViewBag.ListaUsuarios).GetHtml()
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="form-group">
-                                            <div> &nbsp; </div>
-                                            <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="form-group">
-                                            <div> &nbsp; </div>
-                                            <input type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
-                                        </div>
-                                    </div>
+                            <div class="col-sm-3">
+                                <div class="form-group">
+                                    <div> &nbsp; </div>
+                                    <input type="submit" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
                                 </div>
                             </div>
                         </div>
-                        @if (ViewBag.MessageError != null)
+                        <br />
+                        @*<div class="row clearfix">
+        </div>
+        <br />
+        <div class="row clearfix">
+            <div class="col-sm-12">
+                <div class="row clearfix">
+                    <div class="col-sm-3">
+                       <strong>Nombre:</strong>
+                        @Html.DevExpress().ComboBox(settings =>
+                   {
+                       settings.Name = "IdUsuario";
+                       settings.Width = 180;
+                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                       settings.Theme = "Material";
+                       settings.Properties.TextField = "NombreCompleto";
+                       settings.Properties.ValueField = "IdUsuario";
+                       settings.Properties.ValidationSettings.RequiredField.IsRequired = false;
+                       settings.PreRender = (s, e) =>
                        {
+                           MVCxComboBox combo = s as MVCxComboBox;
+                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                           combo.Properties.ValueType = typeof(int);
+                           combo.SelectedIndex = 0;
+                       };
+                   }).BindList(ViewBag.ListaUsuarios).Bind(Model.IdUsuario).GetHtml()
+                    </div>
+                    <div class="col-sm-3">
+                        <strong>Correo Elect. (Acceso):</strong>
+                        @Html.DevExpress().ComboBox(settings =>
+                   {
+                       settings.Name = "Email1";
+                       settings.Width = 180;
+                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                       settings.Theme = "Material";
+                       settings.Properties.TextField = "Email1";
+                       settings.Properties.ValueField = "Email1";
+                       settings.PreRender = (s, e) =>
+                       {
+                           MVCxComboBox combo = s as MVCxComboBox;
+                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                           combo.SelectedIndex = 0;
+                       };
+                   }).BindList(ViewBag.ListaUsuarios).GetHtml()
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <div> &nbsp; </div>
+                            <input type="submit" id="btnBuscar" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>*@
+                        @if (ViewBag.MessageError != null)
+                        {
                             <div class="row clearfix">
                                 <div id="divMensajeError" class="container">
                                     <div class="alert alert-danger">
@@ -159,50 +160,52 @@
                         <br />
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-hover" name="EmpresasGaseras">
-                                        <thead>
-                                            <tr>
-                                                <th>Gasera</th>
-                                                <th>Nombre</th>
-                                                <th>E-mail (Acceso)</th>
-                                                <th>Celular</th>
-                                                <th>Teléfono</th>
-                                                <th>Acciones</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            @foreach (var item in Model.Listausuarios)
-                                            {
-                                            <tr>
-                                                <th>@item.Empresa</th>
-                                                <td>@item.Nombre @item.Apellido1 @item.Apellido2 </td>
-                                                <td>@item.Email1</td>
-                                                <td>@item.Celular1</td>
-                                                <td>@item.Telefono1</td>
-                                                <td>
-                                                    <a href="@Url.Action("EditarUsuario", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <i class="material-icons">edit</i>
-                                                        <span>Editar usuario</span>
-                                                    </a>
-                                                    <a href="@Url.Action("ActualizaCredenciales", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <i class="zmdi zmdi-settings"></i>
-                                                        <span>Actualiza credenciales</span>
-                                                    </a>
-                                                    <a href="@Url.Action("ActualizaRoles", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <i class="material-icons">dashboard</i>
-                                                        <span>Actualiza roles</span>
-                                                    </a>
-                                                    <a href="@Url.Action("BorrarUsuario", "Usuarios", new {  id=item.IdUsuario } )" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <i class="material-icons">delete</i>
-                                                        <span>Eliminar usuario</span>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                            }
-                                        </tbody>
-                                    </table>
-                                </div>
+                                @Html.Partial("_CB_Usuarios", (List<UsuariosModel>)TempData["DataSourceUsuarios"])
+
+                                @*<div class="table-responsive">
+                    <table class="table table-striped table-hover" name="EmpresasGaseras">
+                        <thead>
+                            <tr>
+                                <th>Gasera</th>
+                                <th>Nombre</th>
+                                <th>E-mail (Acceso)</th>
+                                <th>Celular</th>
+                                <th>Teléfono</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Listausuarios)
+                            {
+                            <tr>
+                                <th>@item.Empresa</th>
+                                <td>@item.Nombre @item.Apellido1 @item.Apellido2 </td>
+                                <td>@item.Email1</td>
+                                <td>@item.Celular1</td>
+                                <td>@item.Telefono1</td>
+                                <td>
+                                    <a href="@Url.Action("EditarUsuario", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">edit</i>
+                                        <span>Editar usuario</span>
+                                    </a>
+                                    <a href="@Url.Action("ActualizaCredenciales", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="zmdi zmdi-settings"></i>
+                                        <span>Actualiza credenciales</span>
+                                    </a>
+                                    <a href="@Url.Action("ActualizaRoles", "Usuarios", new { id = item.IdUsuario })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">dashboard</i>
+                                        <span>Actualiza roles</span>
+                                    </a>
+                                    <a href="@Url.Action("BorrarUsuario", "Usuarios", new {  id=item.IdUsuario } )" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">delete</i>
+                                        <span>Eliminar usuario</span>
+                                    </a>
+                                </td>
+                            </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>*@
                             </div>
                         </div>
 
